--- a/src/portfolio/style/style.scss
+++ b/src/portfolio/style/style.scss
@@ -6,68 +6,8 @@
 
 
 
-.face {
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: #ffcc00cb;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.face::before {
-  content: "";
-  position: absolute;
-  top: 60px;
-  width: 48px;
-  height: 22px;
-  background: #b57700;
-  border-bottom-left-radius: 14px;
-  border-bottom-right-radius: 14px;
-  transition: 0.5s;
-}
-
-.face:hover::before {
-  top: 66px;
-  width: 48px;
-  height: 6px;
-  background: #b57700;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
-}   
-
-.eyes {
-  position: relative;
-  top: -8px;
-  display: flex;
-}
-
-.eyes .eye {
-  position: relative;
-  width: 26px;
-  height: 26px;
-  display: block;
-  background: #fff;
-  margin: 0 15px;
-  border-radius: 50%;
-}
-
-.eyes .eye::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 8px;
-  transform: translate(-50%, -50%);
-  width: 12px;
-  height: 12px;
-  background: #333;
-  border-radius: 50%;
-}
-
 body{
-  font: 25px "Nunito", sans-serif;
+  font: 30px "Nunito", sans-serif;
   color: black;
   min-height: 100vh;
   padding: 2rem;
@@ -75,7 +15,6 @@ body{
   justify-content: center;
   align-items: center;
 
-  
   &::before{
     content: '';
     position: fixed;
@@ -84,6 +23,7 @@ body{
     pointer-events:none;
     background: linear-gradient(180deg, #88c0f1, #8421ca)
   };
+  
 }
 
 @keyframes backgroundZoomAnimate{
@@ -108,6 +48,14 @@ body{
 
   @media screen and (max-width:968px) {
     width: auto;
+  }
+  
+  .row {
+    display: flex;
+  }
+  
+  .column {
+    flex: 50%;
   }
 
   .card_img{
@@ -138,6 +86,10 @@ body{
   }
 
   .card_qualities{
+    box-shadow: 0 18px 200px -60px white;
+    border:2px solid #ffffff40;
+    backdrop-filter: blur(30  px);
+    border-radius: 50px;
     display: flex;
     justify-content: center;
     gap: 50px;
@@ -275,6 +227,12 @@ body{
       }
     }
   }
+}
+
+.card_qualities{
+  border-style: solid;
+  border-width: 5px;
+  border-radius: 50%;
 }
 
 
